domapp-tools release notes

Next release:
Issue 1443: domapptest.py - lengthen timeout for domapp transition 
Issue 1444: DMT - fix broken sntest delta t check at beginning of sn data
Issue 1442: domapptest.py - Don't print empty debugMsgs during test failures
===========================================================

V00-02-00 jacobsen@mail.npxdesigns.com 05/18/07

Issue 1431: Add new python tests to RPM
Issue 1407: domapptest.py - compare multiple sets of collected pedestals, 
            require deviation to be small 
Issue 1401: Check for out-of-order timestamps (in supernova data)
Issue 0756: collect pedestals in domapp before taking compressed data
Issue 1269: decodeeng - fix decoder bug in bele.h found by john pretz
===========================================================

V00-01-03 jacobsen@npxdesigns.com 07/04/06

- Issues 537 (test for Kael SN bug), 536 (don't test HVSPETestCompr if -N flag is given to domapp_multitest.pl) and 307 (run for longer interval, look for bad SN timestamps)

===========================================================

V00-01-02 jacobsen@npxdesigns.com 05/01/06

- fixed logic for checking correctness of trigger flags (domapp_multitest.pl)

===========================================================

V00-01-01 jacobsen@npxdesigns.com 05/01/06

- Added "domapp-versions" script which can be run when all DOMs are running domapp.
- Fix query HV message in domapptest
- Catch out of order time stamps in SN data
- Generalize LC windows and fix to match new HAL range

===========================================================

V00-01-00 jacobsen@npxdesigns.com 01/03/06
Requires: moat         V00-02-00 or greater
          domhub-tools       200 or greater

- Add first version of an optional test which takes
  long duration data with SPE triggers and 1 Hz beacons.
  HV can be either off, in which case only beacon data will
  show up, or on, in which case you will get both beacon