@@ -1,6 +1,7 @@
 domapp-tools release notes
 
 Next release:
+Issue 1465: domapptest.py - report dor-driver, domapp-tools versions in output
 Issue 1443: domapptest.py - lengthen timeout for domapp transition 
 Issue 1444: DMT - fix broken sntest delta t check at beginning of sn data
 Issue 1442: domapptest.py - Don't print empty debugMsgs during test failures
